# factorio-buddy

./: .agent_memory.json  .env.example  .gitignore  CLAUDE.md  Cargo.toml  GOAL.md  NOTES.md  NOTICE  README.md  build.rs  justfile
companion/: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh  justfile  pyproject.toml  run.sh  start-server.sh  stop-server.sh
companion/bridge/: .env.example  __init__.py  cooldowns.py  eval.py  journal.py  learning.py  ledger.py  models.py  paths.py  pipe.py  planner.py  pre_tool_gates.py  prompt_eval.py  rcon.py  relay_push.sh  report.py  runtime_paths.py  skills.py  telemetry.py  test_eval.py  test_journal.py  test_learning.py  test_ledger.py  test_models.py  test_models_agent_config.py  test_models_bridge_log_power.py  test_models_input_response.py  test_models_journal.py  test_models_ledger.py  test_models_live_eval_rcon.py  test_models_skill_learning.py  test_models_tool_result.py  test_models_tool_schema_sdk.py  test_paths.py  test_planner.py  test_prompt_eval.py  test_report.py  test_skills.py  test_telemetry.py  test_transport.py  (+3 more)
companion/bridge/agents/: default.json  doug-aquilo.json  doug-fulgora.json  doug-gleba.json  doug-nauvis.json  doug-vulcanus.json
companion/bridge/models/: __init__.py  _compat.py  base.py  bridge_log.py  eval_models.py  input_models.py  journal_models.py  learning_models.py  ledger_models.py  live.py  power_models.py  rcon_models.py  response_models.py  sdk_models.py  settings_models.py  (+4 more)
companion/configs/: server.json
companion/relay/: package.json  wrangler.toml
(+139 files in other folders)
