[project]
name = "factorio-companion"
version = "0.1.0"
description = "Autonomous Factorio companion bridge (RCON <-> claude CLI agent loop)"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.2.110",
    "loguru>=0.7.2",
    "pydantic>=2.13.4",
]

# Source-run application: uv manages the venv + deps, nothing to build.
# The bridge package is imported directly from the working tree.
[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["bridge"]
pythonpath = ["bridge"]

[tool.ruff]
line-length = 100
target-version = "py310"
